# wikiwikiwrap

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
tests/: test_limiter.py  test_logger.py  test_wikipedia.py
tests/fixtures/vcr_cassettes/: test_article_not_found.yaml  test_get_views.yaml
wikiwikiwrap/: __init__.py  config.py
wikiwikiwrap/api/v1/: wikipedia.py
wikiwikiwrap/utils/: cache.py  limiter.py  logger.py
